# aerocaps

./: .gitignore  .readthedocs.yaml  Cargo.toml  README.md  pyproject.toml
aerocaps/: __init__.py  version.py
aerocaps/examples/: fill_surface.py
aerocaps/geom/: curves.py  geometry_container.py  nurbs_purepython.py  surfaces.py  tools.py  vector.py
aerocaps/rust/: __init__.py
aerocaps/rust_math/: __init__.py
aerocaps/rust_math/src/: lib.rs
aerocaps/rust_nurbs/: __init__.py  nurbs.rs
aerocaps/scripts/: make_surface_plots.py  rust_speed_test.py
aerocaps/stl/: stl_generator.py
aerocaps/tests/: rust_speed_test.py  test_fill_surface.py  test_surface_continuity_optimizer.py  test_surfaces.py
aerocaps/tests/geom/: test_geometry_container.py  test_plane.py  test_surfaces.py
astk/: __init__.py
astk/geom/: __init__.py  curves.py  intersection.py  line.py  plane.py  point.py  surfaces.py  tools.py  transformation.py  vector.py
astk/iges/: curves.py  entity.py  examples.py  global_params.py  iges_generator.py  point.py  start_end_section.py  surfaces.py  transformation.py
astk/stl/: stl_generator.py
astk/tests/: test_fill_surface.py  test_surfaces.py
astk/units/: angle.py  area.py  length.py  unit.py
docs/source/: api.rst  conf.py  index.rst  install.rst  requirements.txt
