[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pymead"
authors = [
    {name = "Matthew G Lauer", email = "mlauer2015@gmail.com"}
]
description = "Toolkit for 3-D parametric design of aerodynamic surfaces"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "aerodynamics",
    "MDAO",
    "MDO",
    "parametric",
    "airfoil system",
    "surface modeling",
    "surface design",
    "NURBS",
    "B-Spline"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "scipy",
    "numpy",
    "matplotlib",
    "pyvista"
]
dynamic = ["version"]

[tool.setuptools]
packages = [
    "astk",
    "astk.geom",
    "astk.iges",
    "astk.scripts",
    "astk.stl",
    "astk.tests",
    "astk.units",
    "astk.utils"
]

[tool.setuptools.dynamic]
version = {attr = "astk.version.__version__"}
